--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="style.css">
+
+</head>
 <body>
-<h1> ALEXJAWESOME</h1>
+
+<h1>Welcome to my website!!</h1>
+<p>This is Shadow the Hedgehog</p>
+<img id="rotated" src="assets/shadow.png" ></img>
+<br>
+<button onclick="rotate()" id="booty">Click Me!</button>
+<div id="butt"></div>
+<br>
+
+<script src="script.js"></script>
 </body>
+</html>
