--- a/index.html
+++ b/index.html
@@ -2,18 +2,30 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>
 
+
+<div class="bello">
+    <h1>Hello people of the internet!</h1>
+    <p> My name is Alex. Click the click me button bellow shaddow. I swear im normal.<br> Please ignore the big floating <br>burger that has eyes athat spin idk how <br>to get rid of it it just apeared there please help.<br><br>Click the big email thing if you want my email idk why you would though (alexdurrani16@gmail.com)</p>
+</div>
 <h1>Welcome to my website!!</h1>
 <p>This is Shadow the Hedgehog</p>
 <img id="rotated" src="assets/shadow.png" ></img>
+<img src="assets/burg.gif">
+
+
+
 <br>
 <button onclick="rotate()" id="booty">Click Me!</button>
 <div id="butt"></div>
 <br>
+<a href="mailto:alexdurrani16@gmail.com"><img src="assets/email.gif"></img></a>
+<br>
 
+<iframe width="500" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1959489231&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dongrat" title="Alex Okay" target="_blank" style="color: #cccccc; text-decoration: none;">Alex Okay</a> · <a href="https://soundcloud.com/dongrat/madhouse" title="Madhouse" target="_blank" style="color: #cccccc; text-decoration: none;">Madhouse</a></div>
 <script src="script.js"></script>
 </body>
 </html>
