--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+<title>Alex's webpage of awesomeness</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>
